# Agents-Anywhere

./: .dockerignore  .gitignore  README.en.md  README.md  README.zh-CN.md  dev.sh
_reference/httpx-s3-client/: .gitignore  README.md  pyproject.toml  simple_test.py  test_fix.py
_reference/httpx-s3-client/examples/: s3kv_example.py
_reference/httpx-s3-client/httpx_s3_client/: __init__.py  _base.py  aclient.py  client.py  config.py  exceptions.py  kv.py  signing.py  utils.py
connector/: README.md  pyproject.toml  run.sh
connector/connector/: __init__.py  adapter.py  attachments.py  capabilities.py  cli.py  control.py  json_rpc.py  launch.py  local_ops.py  local_runtime.py  logging.py  perf.py  protocol.py  protocol_catalogs.py  registry.py  runtime.py  runtime_discovery.py  runtime_lifecycle.py  sync_state.py
connector/connector/acp/: __init__.py  adapter.py  config_options.py  discovery.py  manifest.py  reducer.py  rpc.py
connector/connector/claude/: __init__.py  adapter.py  approval_parser.py  history_adapter.py  normalized.py  normalizers.py  path_utils.py  preferences.py  pty_runner.py  reducer.py  sdk_adapter.py  timeline_identity.py  timeline_reducer.py  trust.py  watcher.py
connector/connector/codex/: __init__.py  adapter.py  history.py  reducer.py  rpc.py
connector/connector/local/: __init__.py  common.py  file_ops.py  ops.py  shell.py  terminal.py
connector/tests/: test_claude_adapter.py  test_claude_approval_parser.py  test_claude_history_adapter.py  test_claude_preferences.py  test_claude_pty_runner.py  test_claude_reducer.py  test_claude_resolve_approval.py  test_claude_sdk_adapter.py  test_claude_timeline_parity.py  test_claude_trust.py  test_claude_watcher_tail.py  test_claude_write_path.py  test_codex_adapter.py  test_connector_capabilities.py  test_connector_cli.py  test_connector_control.py  test_connector_json_rpc.py  test_connector_logging.py  test_connector_runtime.py  test_local_runtime.py  test_perf.py  test_protocol_models.py  test_runtime_discovery.py  test_runtime_lifecycle.py  test_terminal_backend.py
connector/tests/acp/: test_acp_adapter_fake.py  test_acp_reducer_golden.py  test_config_options.py
connector/tests/contract/: helpers.py
server/: .gitignore  README.md  pyproject.toml  run.sh
server/agent_server/: app.py  deps.py  main.py
server/agent_server/api/: admin.py  admin_dashboard.py  agents.py  approvals.py  auth.py  client_ws.py  connector_ingress.py  connectors.py  oauth.py  pairing.py  service.py  sessions.py  sessions_fs.py  sessions_shell.py  sessions_terminal.py
server/agent_server/core/: api_namespace.py  auth.py  device_runtime.py  models.py  protocol.py  runtime_config.py  setup_token.py
server/agent_server/infra/: connector_rpc.py  fs_downloads.py  perf.py  terminal_broker.py  terminal_stream_hub.py  timeline_broker.py  ws_tickets.py  (+1 more)
server/tests/: conftest.py  test_acp_runtime_identity.py  test_acp_schema_merge.py  test_admin_dashboard.py  test_auth.py  test_backend_mvp.py  test_claude_sdk_driver.py  test_connector_rpc_manager.py  test_connector_runtime_settings_ingest.py  test_perf_stage_timing.py  test_protocol_models.py  test_runtime_config.py  test_session_run_auth_fast_fail.py  test_timeline_broker.py  test_timeline_lock.py
(+560 files in other folders)
