[project]
name = "anywhere-cli"
version = "0.1.7.2"
description = "Local runtime connector for Agents Anywhere"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "pexpect>=4.9.0; sys_platform != 'win32'",
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
    "pydantic>=2.0.0",
    "pyte>=0.8.2",
    "python-socks>=2.8.1",
    "pywinpty>=2.0.13; sys_platform == 'win32'",
    "websockets>=16.0",
]

[project.scripts]
anywhere-cli = "connector.cli:main"
agent-connector = "connector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "contract: adapter/timeline contract tests (always CI)",
    "live_agent: optional tests against real agent binaries",
]

[tool.hatch.build.targets.wheel]
packages = ["connector"]

[tool.hatch.build.targets.wheel.force-include]
"connector/acp/manifests" = "connector/acp/manifests"

[tool.uv]
package = true
