[project]
name = "agent-server"
version = "0.1.0"
description = "FastAPI backend for Agents Anywhere"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "claude-agent-sdk",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "httpx-s3-client",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
httpx-s3-client = { git = "https://github.com/t4wefan/httpx-s3-client.git" }
