[project]
name = "httpx-s3-client"
version = "0.1.0"
description = "A modular, sync and async S3 client."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "black",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "xmltodict>=0.14.2",
]

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
